telas que devem ir

--- a/projj.html
+++ b/projj.html
@@ -129,7 +129,7 @@
                 <a href="#" class="btn btn-default">Marcas de Aparelhos</a>
                 <a href="#" class="btn btn-default">Modelos de Aparelhos</a>
              </div>
-           
+     </div>      
 
        
 <!-- 
@@ -167,11 +167,40 @@
            </div> -->
 
 
-          </div>
          </div>
         </div>
       </section>
+      <hr class="featurette-divider">
+      <section id="sobre">
+        <div class="page-header">
+            <h1 class="text-center">Modelo BG4578SW</h1>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                  <h3><a href="#">Refrigerador não liga.</a></h3><br/>
+                  <h3><a href="#">Refrigerador não acende nenhuma luz.</a></h3><br/>
+                  <h3><a href="#">Refrigerador com luz vermelha piscando.</a></h3><br/>
 
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr class="featurette-divider">
+
+      <section id="sobre">
+        <div class="page-header">
+            <h1 class="text-center">Refrigerador não liga</h1>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                  <h3>Por favor, verifique se todos os cabos estão conectados corretamente.</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr class="featurette-divider">
 
 <!--       <hr class="featurette-divider">
  -->
