--- a/projj.html
+++ b/projj.html
@@ -173,17 +173,22 @@
       <hr class="featurette-divider">
       <section id="sobre">
         <div class="page-header">
-            <h1 class="text-center">Modelo BG4578SW</h1>
+            <h2 class="text-center">Modelo BG4578SW</h2>
         </div>
         <div class="container">
           <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                  <h3><a href="#">Refrigerador não liga.</a></h3><br/>
-                  <h3><a href="#">Refrigerador não acende nenhuma luz.</a></h3><br/>
-                  <h3><a href="#">Refrigerador com luz vermelha piscando.</a></h3><br/>
-
+            <div class="panel-group">
+             <div class="panel panel-info">
+               <div class="panel-heading">
+                  <h4><a href="#">Refrigerador não liga.</a></h4><br/>
+                  <h4><a href="#">Refrigerador não acende nenhuma luz.</a></h4><br/>
+                  <h4><a href="#">Refrigerador com luz vermelha piscando.</a></h4><br/>
+                </div>
+                </div>
             </div>
           </div>
+        </div>
         </div>
       </section>
       <hr class="featurette-divider">
@@ -195,7 +200,12 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
+            <div class="panel-group">
+             <div class="panel panel-success">
+              <div class="panel-heading">
                   <h3>Por favor, verifique se todos os cabos estão conectados corretamente.</h3>
+                  </div>
+                  </div>
             </div>
           </div>
         </div>
